--- a/tutorial_06/css/style.css
+++ b/tutorial_06/css/style.css
@@ -1,6 +1,7 @@
 body{
-  background-color: #ffebcd;
+  /*background-color: #ffebcd;*/
   /*background-color: #000000;*/
+  background-color: #c02525;
 }
 
 form{
